# pgm-args

./: .gitignore  CMakeLists.txt  README.md  args.cpp  args.hpp  args.ipp
debian/: changelog  control  copyright  libpgm-args-dev.docs  rules
example/: CMakeLists.txt  example1.cpp  example2.cpp  main.cpp
lib/: CMakeLists.txt  Config.cmake.in
lib/pgm/: args.hpp  args.ipp
test/: CMakeLists.txt  test_args.cpp
